--- a/CapstoneProject/Views/Home/Index.cshtml
+++ b/CapstoneProject/Views/Home/Index.cshtml
@@ -2,9 +2,35 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    Movie ticket
-</div>
+<body>
 
+    <div id="slide" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#slide" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#slide" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#slide" data-bs-slide-to="2"></button>
+        </div>
+
+        <!-- The slideshow (carousel) -->
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://creativereview.imgix.net/content/uploads/2019/12/tumblr_750d158724d2a4eda991cc043a0e24a6_a44cf335_1280.jpg?auto=compress,format&q=60&w=1000&h=" alt="The Souvenir (Midnight Marauder)" class="d-block" style="width: 40%; float: left;">
+            </div>
+            <div class="carousel-item">
+                <img src="https://creativereview.imgix.net/content/uploads/2019/12/parasite_xxlg.jpg?auto=compress,format&q=60&w=1053&h=" alt="Parasite" class="d-block" style="width: 40%; float: left;">
+            </div>
+            <div class="carousel-item">
+                <img src="https://creativereview.imgix.net/content/uploads/2019/12/uncut_gems_xxlg.jpg?auto=compress,format&q=60&w=961&h=" alt="Uncut Gems (BLT)" class="d-block" style="width: 40%; float: left;">
+            </div>
+        </div>
+
+        <!-- Left and right controls (icons) -->
+        <button class="carousel-control-prev" type="button" data-bs-target="#slide" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#slide" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </button>
+    </div>
+
+</body>
