--- a/CapstoneProject/Views/Home/Index.cshtml
+++ b/CapstoneProject/Views/Home/Index.cshtml
@@ -1,36 +1,157 @@
-﻿@{
+﻿@model IEnumerable<CapstoneProject.Models.Movies>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <body>
 
-    <div id="slide" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#slide" data-bs-slide-to="0" class="active"></button>
-            <button type="button" data-bs-target="#slide" data-bs-slide-to="1"></button>
-            <button type="button" data-bs-target="#slide" data-bs-slide-to="2"></button>
+    <section class="search">
+
+        <div class="container">
+            <div class="card mask-custom p-4 border-0">
+                <div class="card-body">
+                    <p class="h1 font-weight-bold mb-4 ">Search the Movie</p>
+                    <div class="row justify-content-center">
+                        <div class="col-md-6 mb-3 mb-md-0">
+                            <div id="basic" class="form-outline form-white">
+                                <input type="text" id="sec1" class="form-control form-control-lg" />
+                                <label class="form-label" for="sec1">Which movie you are looking for?</label>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-3 mb-md-0">
+                            <div id="genre" class="form-outline form-white">
+                                <input type="text" id="sec2" class="form-control form-control-lg" />
+                                <label class="form-label" for="sec2">Genre</label>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <input class="btn btn-info btn-block btn-lg" type="submit" value="Search" />
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <!-- The slideshow (carousel) -->
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://creativereview.imgix.net/content/uploads/2019/12/tumblr_750d158724d2a4eda991cc043a0e24a6_a44cf335_1280.jpg?auto=compress,format&q=60&w=1000&h=" alt="The Souvenir (Midnight Marauder)" class="d-block" style="width: 40%; float: left;">
-            </div>
-            <div class="carousel-item">
-                <img src="https://creativereview.imgix.net/content/uploads/2019/12/parasite_xxlg.jpg?auto=compress,format&q=60&w=1053&h=" alt="Parasite" class="d-block" style="width: 40%; float: left;">
-            </div>
-            <div class="carousel-item">
-                <img src="https://creativereview.imgix.net/content/uploads/2019/12/uncut_gems_xxlg.jpg?auto=compress,format&q=60&w=961&h=" alt="Uncut Gems (BLT)" class="d-block" style="width: 40%; float: left;">
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="simple-slider">
+                        <div class="swiper-container">
+                            <div class="swiper-button-next"></div>
+                        </div>
+                    </div>
+                    <div class="carousel slide" data-bs-ride="carousel" id="carousel-1">
+                        <div class="carousel-inner">
+
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="w-100 d-block" data-aos="fade" data-aos-delay="100" id="randomMovieImage1" alt="Slide Image" style="width: 500px; height: 700px;">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="w-100 d-block" data-aos="fade" data-aos-delay="100" id="randomMovieImage2" alt="Slide Image2" style="width: 500px; height: 700px;">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="w-100 d-block" data-aos="fade" data-aos-delay="100" id="randomMovieImage3" alt="Slide Image3" style="width: 500px; height: 700px;">
+                                </div>
+                            </div>
+
+                        </div>
+                        <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
+                        <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-1" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="2"></button></div>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="list-group scrollarea" id="movieScroll">
+                        @foreach (var movie in Model.Take(4).OrderBy(m => m.ReleaseDate))
+                        {
+                            <div class="list-group-item list-group-item-action">
+                                <div class="row">
+                                    <div class="col-3 col-md-2">
+                                        <img src="@movie.PosterImageUrl" class="img-fluid" alt="Movie Poster">
+                                    </div>
+                                    <div class="col-9 col-md-10">
+                                        <h5 class="mb-1">@movie.Title</h5>
+                                        <p class="text-muted">@movie.ReleaseDate.ToShortDateString()</p>
+                                        <p>@movie.Description</p>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                    </div>
+                </div>
+
             </div>
         </div>
+    </section>
 
-        <!-- Left and right controls (icons) -->
-        <button class="carousel-control-prev" type="button" data-bs-target="#slide" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#slide" data-bs-slide="next">
-            <span class="carousel-control-next-icon"></span>
-        </button>
-    </div>
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5"><img class="rounded-circle img-fluid" src="image/01.jpg"></div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2 class="display-4">Explore the World of Cinema</h2>
+                        <p>Discover the magic of movies and dive into a world of captivating stories and unforgettable moments. Immerse yourself in the art of filmmaking and explore the rich tapestry of cinematic experiences.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5"><img class="rounded-circle img-fluid" src="image/02.jpg"></div>
+                </div>
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5">
+                        <h2 class="display-4">Lights, Camera, Action!</h2>
+                        <p>Step into the spotlight and be part of the cinematic journey. From thrilling adventures to heartfelt dramas, movies bring the stories to life. Get ready to experience the excitement of the silver screen.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5"><img class="rounded-circle img-fluid" src="image/03.jpg"></div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2 class="display-4">Where Dreams Come to Life</h2>
+                        <p>Experience the magic of the big screen. Let your imagination soar and lose yourself in the enchanting world of cinema. Join us as we celebrate the power of storytelling through film.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 </body>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>$(document).ready(function () {
+        // Function to update a random movie image
+        function updateRandomMovieImage(imageId, callback) {
+            $.get('/api/random', function (data) {
+                $(imageId).attr('src', data);
+                if (typeof callback === 'function') {
+                    callback();
+                }
+            });
+        }
+        // Call the function for each random movie image sequentially
+        updateRandomMovieImage('#randomMovieImage1', function () {
+            updateRandomMovieImage('#randomMovieImage2', function () {
+                updateRandomMovieImage('#randomMovieImage3');
+            });
+        });
+    });</script>
