--- a/CapstoneProject/Views/Shared/_Layout.cshtml
+++ b/CapstoneProject/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Movie" asp-action="Index">Movies</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Theater" asp-action="Index">Theaters</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
