Minor fix in Theaters Page

--- a/CapstoneProject/Views/Theater/Index.cshtml
+++ b/CapstoneProject/Views/Theater/Index.cshtml
@@ -35,7 +35,7 @@
             </div>
             <div class="col-md-8">
                 <div class="filter-row d-flex mb-3">
-                    <!-- Horizontal Filters: Date, Theater, Genre -->
+                    <!-- Filters: City and Country -->
                     <div class="filter me-3">
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="cityDropdownButton" data-bs-toggle="dropdown" aria-expanded="false">
@@ -54,7 +54,7 @@
                                 <li>
                                     <a class="dropdown-item" href="#">New Westminster</a>
                                 </li>
-                                <!-- Add more date options here in YYYY-MM-DD format -->
+                                <!-- Add more city options here -->
                             </ul>
                         </div>
                     </div>
@@ -76,32 +76,10 @@
                                 <li>
                                     <a class="dropdown-item" href="#">Mexico</a>
                                 </li>
-                                <!-- Add more theatre options here -->
+                                <!-- Add more country options here -->
                             </ul>
                         </div>
                     </div>
-                    @* <div class="filter me-3">
-                        <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="moviesDropdownButton" data-bs-toggle="dropdown" aria-expanded="false">
-                                Movies
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="movuesDropdownButton">
-                                <li>
-                                    <a class="dropdown-item" href="#">All Movies</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#">Action</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#">Comedy</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#">Romance</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div> *@
-
                 </div>
             </div>
         </div>
@@ -110,13 +88,49 @@
     <!-- Threatres Section using bootstrap -->
     <div class="container mt-3">
         <ul class="list-group">
+            <li class="list-group-item">
+                <div class="jumbotron">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Cineplex_Entertainment_logo_%282009-2015%29.svg" class="img-rounded" alt="CineplexLogo">
+                        </div>
+                        <div class="col-sm-8">
+                            <h4>Cineplex Vancouver</h4>
+                            <div class="address">
+                                <p>
+                                    <span>5345 Homer Street</span><br>
+                                    <span>Vancouver, BC</span>
+                                </p>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    <span>
+                                        Rating
+                                    </span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star"></span>
+                                    <span class="fa fa-star"></span>
+                                </div>
+                                <div class="col-sm-4">
+                                    <span>Theater@contact.ca</span>
+                                </div>
+                                <div class="col-sm-4 text-end">
+                                    <button type="button" class="btn btn-primary">Movies</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </li>
             @foreach (var theater in Model.Take(20))
             {
                 <li class="list-group-item">
                     <div class="jumbotron">
                         <div class="row">
                             <div class="col-sm-4">
-                                <img src="image/04.png" class="img-rounded" alt="CineplexLogo">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Cineplex_Entertainment_logo_%282009-2015%29.svg" class="img-rounded" alt="CineplexLogo">
                             </div>
                             <div class="col-sm-8">
                                 <h4>@theater.Name</h4>
@@ -149,42 +163,6 @@
                     </div>
                 </li>                
             }
-            <li class="list-group-item">
-                <div class="jumbotron">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <img src="image/04.png" class="img-rounded" alt="CineplexLogo">
-                        </div>
-                        <div class="col-sm-8">
-                            <h4>Cineplex Vancouver</h4>
-                            <div class="address">
-                                <p>
-                                    <span>5345 Homer Street</span><br>
-                                    <span>Vancouver, BC</span>
-                                </p>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-4">
-                                    <span>
-                                        Rating
-                                    </span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star"></span>
-                                    <span class="fa fa-star"></span>
-                                </div>
-                                <div class="col-sm-4">
-                                    <span>Theater@contact.ca</span>
-                                </div>
-                                <div class="col-sm-4 text-end">
-                                    <button type="button" class="btn btn-primary">Movies</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
         </ul>
     </div>
 
