--- a/CapstoneProject/Views/Home/Index.cshtml
+++ b/CapstoneProject/Views/Home/Index.cshtml
@@ -54,15 +54,17 @@
                     <div class="carousel slide" data-bs-ride="carousel" id="carousel-1">
                         <div class="carousel-inner">
                             <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img class="w-100 d-block" data-aos="fade" data-aos-delay="100" id="randomMovieImage1" alt="Slide Image" style="width: 500px; height: 700px;">
-                                </div>
-                                <div class="carousel-item">
-                                    <img class="w-100 d-block" data-aos="fade" data-aos-delay="100" id="randomMovieImage2" alt="Slide Image2" style="width: 500px; height: 700px;">
-                                </div>
-                                <div class="carousel-item">
-                                    <img class="w-100 d-block" data-aos="fade" data-aos-delay="100" id="randomMovieImage3" alt="Slide Image3" style="width: 500px; height: 700px;">
-                                </div>
+                                @{
+                                    var random = new Random();
+                                    var randomMovies = Model.OrderBy(m => random.Next()).Take(3).ToList();
+                                }
+
+                                @foreach (var movie in randomMovies)
+                                {
+                                    <div class="carousel-item active">
+                                        <img src="@movie.PosterImageUrl" class="w-100 d-block" data-aos="fade" data-aos-delay="80" style="width: 500px; height: 700px;">
+                                    </div>
+                                }
                             </div>
                         </div>
                         <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
@@ -71,7 +73,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="list-group fancy-scrollarea" id="movieScroll">
-                        @foreach (var movie in Model.Take(10).OrderBy(m => m.ReleaseDate))
+                        @foreach (var movie in Model.Take(10).OrderByDescending(m => m.ReleaseDate))
                         {
                             <div class="card mb-4">
                                 <div class="row no-gutters">
@@ -144,21 +146,3 @@
 
 
 </body>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script>$(document).ready(function () {
-        // Function to update a random movie image
-        function updateRandomMovieImage(imageId, callback) {
-            $.get('/api/random', function (data) {
-                $(imageId).attr('src', data);
-                if (typeof callback === 'function') {
-                    callback();
-                }
-            });
-        }
-        // Call the function for each random movie image sequentially
-        updateRandomMovieImage('#randomMovieImage1', function () {
-            updateRandomMovieImage('#randomMovieImage2', function () {
-                updateRandomMovieImage('#randomMovieImage3');
-            });
-        });
-    });</script>
