--- a/CapstoneProject/Views/Home/Index.cshtml
+++ b/CapstoneProject/Views/Home/Index.cshtml
@@ -120,7 +120,9 @@
                                     </div>
                                     <div class="col-md-9">
                                         <div class="card-body">
-                                            <h4 class="card-title">@movie.Title</h4>
+                                            <a asp-controller="Movie" asp-action="SingleMovie" asp-route-id="@movie.Id">
+                                                <h4 class="card-title">@movie.Title</h4>
+                                            </a>
                                             <p class="card-text">@movie.Description</p>
                                         </div>
                                     </div>
