--- a/CapstoneProject/Views/Home/Index.cshtml
+++ b/CapstoneProject/Views/Home/Index.cshtml
@@ -7,23 +7,25 @@
 
 <head>
     <link rel="stylesheet" href="css/site.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.17.0/font/bootstrap-icons.css">
+
     <style>
         .scroll-box {
-            width: 100%; 
-            height: auto; 
-            overflow-x: scroll; 
-            overflow-y: hidden; 
-            white-space: nowrap; 
-            scrollbar-width: none; 
-            -ms-overflow-style: none; 
+            width: 100%;
+            height: auto;
+            overflow-x: scroll;
+            overflow-y: hidden;
+            white-space: nowrap;
+            scrollbar-width: none;
+            -ms-overflow-style: none;
             display: flex;
-            flex-wrap: nowrap; 
-            justify-content: flex-start; 
+            flex-wrap: nowrap;
+            justify-content: flex-start;
         }
 
-        .scroll-box::-webkit-scrollbar {
-                width: 0; 
-        }
+            .scroll-box::-webkit-scrollbar {
+                width: 0;
+            }
 
         .box-content {
             width: 100%;
@@ -40,7 +42,6 @@
         .search-body {
             min-height: 100px;
         }
-
     </style>
 </head>
 
@@ -126,6 +127,32 @@
                                 </div>
                                 <div class="card-footer text-muted">
                                     Release Date: @movie.ReleaseDate
+
+                                    @if (Model.FavMovies.Any(f => f.MovieId == movie.Id))
+                                    {
+
+                                        <form asp-action="AddToFavorites">
+                                            <input type="hidden" name="movieId" value="@movie.Id" />
+                                            <button type="submit" class="btn btn-link">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                                    <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
+                                                </svg>
+                                            </button>
+                                        </form>
+                                    }
+                                    else
+                                    {
+                                        <form asp-action="AddToFavorites">
+                                            <input type="hidden" name="movieId" value="@movie.Id" />
+                                            <button type="submit" class="btn btn-link">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                                                    <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.920 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
+                                                </svg>
+                                            </button>
+                                        </form>
+                                    }
+
+
                                 </div>
                             </div>
                         }
