--- a/CapstoneProject/Views/Home/Index.cshtml
+++ b/CapstoneProject/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <head>
     <link rel="stylesheet" href="css/site.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.17.0/font/bootstrap-icons.css">
-
+    <link rel="stylesheet" href="~/css/indexStyle.css">
     <style>
         .scroll-box {
             width: 100%;
@@ -175,26 +175,85 @@
         </div>
     </section>
 
-    <section class="bar">
+    <section>
         <h2 class="scroll-box font-weight-light">Popular Movies</h2>
-        <div class="box-content">
-            <div class="scroll-box d-flex flex-nowrap">
+        <div class="wrapper ">
+            <div class="movie-list">
                 @foreach (var movie in Model.PopularMovies)
                 {
-                    <div class="card card-body">
-                        <h5 class="card-title">@movie.Title</h5>
-                        <img src="https://www.themoviedb.org/t/p/w1280/@movie.backdrop_path" alt="Movie Backdrop">
-                        <div class="row">
-                            <div class="col-6">
-                                <h6 style="color: blue; font-size: 14px">@movie.release_date</h6>
-                                <h6>@movie.original_language</h6>
+                    <div class="movie-card cardn">
+
+                        <img src="https://www.themoviedb.org/t/p/w1280/@movie.backdrop_path" alt="Movie poster" class="movie-poster">
+                        <div class="movie-info">
+                            <h1 class="movie-title">@movie.Title</h1>
+                        </div>
+                        <div class="rate-circle">
+                            <span class="rating">@(movie.vote_average * 10)&"%"</span>
+                        </div>
+                        <div class="details">
+                            <div class="movie-info">
+                                <h3 class="movie-title">@movie.Title</h3>
+                                @*<button class="btn-watch">Watch Now</button>*@
                             </div>
-                            <div class="col-6">
-                                <div class="star-rating">
-                                    <div class="star-rating-inner" style="width: @(movie.vote_average * 10)">★</div>
-                                </div>
-                                <h6>@movie.vote_average</h6>
+                            <h1>
+                                @if (movie.adult)
+                                {
+                                    <span>+18</span>
+                                }
+
+                            </h1>
+                            <h2>Release Date:@movie.release_date</h2>
+                            <div class="tags">
+                                <span class="tag">@movie.original_language</span>
                             </div>
+                            <p class="desc">
+                                @if (!string.IsNullOrEmpty(movie.overview))
+                                {
+                                    @Html.Raw(movie.overview.Length > 250 ? $"{movie.overview.Substring(0, 250)}..." : movie.overview)
+                                }
+                            </p>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="scroll-box font-weight-light">Now Playing</h2>
+        <div class="wrapper ">
+            <div class="movie-list">
+                @foreach (var movie in Model.NowPlayingMovies)
+                {
+                    <div class="movie-card cardn">
+
+                        <img src="https://www.themoviedb.org/t/p/w1280/@movie.backdrop_path" alt="Movie poster" class="movie-poster">
+                        <div class="movie-info">
+                            <h1 class="movie-title">@movie.Title</h1>
+                            @*<button class="btn-watch">Watch Now</button>*@
+                        </div>
+                        <div class="details">
+                            <h1>
+                                @if (movie.adult)
+                                {
+                                    <span>+18</span>
+                                }
+
+                            </h1>
+                            <h2>Release Date:@movie.release_date</h2>
+                            <div class="tags">
+                                <span class="tag">@movie.original_language</span>
+
+                            </div>
+                            <div class="rate-circle">
+                                <span class="rating">@(movie.vote_average * 10)&"%"</span>
+                            </div>
+                            <p class="desc">
+                                @if (!string.IsNullOrEmpty(movie.overview))
+                                {
+                                    @Html.Raw(movie.overview.Length > 240 ? $"{movie.overview.Substring(0, 240)}..." : movie.overview)
+                                }
+                            </p>
                         </div>
                     </div>
                 }
@@ -250,3 +309,37 @@
 
 
 </body>
+
+
+<script>
+    const ratings = document.querySelectorAll(".rating");
+
+    // Iterate over all rating items
+    ratings.forEach((rating) => {
+        // Get content and get score as an int
+        const ratingContent = rating.innerHTML;
+        const ratingScore = parseInt(ratingContent, 10);
+
+        // Define if the score is good, meh or bad according to its value
+        const scoreClass =
+            ratingScore < 40 ? "bad" : ratingScore < 60 ? "meh" : "good";
+
+        // Add score class to the rating
+        rating.classList.add(scoreClass);
+
+        // After adding the class, get its color
+        const ratingColor = window.getComputedStyle(rating).backgroundColor;
+
+        // Define the background gradient according to the score and color
+        const gradient = `background: conic-gradient(${ratingColor} ${ratingScore}%, transparent 0 100%)`;
+
+
+        // Set the gradient as the rating background
+        rating.setAttribute("style", gradient);
+
+        // Wrap the content in a tag to show it above the pseudo element that masks the bar
+        rating.innerHTML = `<span>${ratingScore} ${ratingContent.indexOf("%") >= 0 ? "<small>%</small>" : ""
+            }</span>`;
+    });
+
+</script>
