--- a/CapstoneProject/Views/Movie/SingleMovie.cshtml
+++ b/CapstoneProject/Views/Movie/SingleMovie.cshtml
@@ -1,5 +1,4 @@
-@model IEnumerable<CapstoneProject.Models.Movies>
-@* @model IEnumerable<CapstoneProject.Models.Reviews> *@
+@model CapstoneProject.Models.MovieViewModel
 
 <!doctype html>
 <html lang="en">
@@ -7,8 +6,25 @@
     <title>@ViewData["Title"] = "Movie";</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
+        .reviews {
+            padding-bottom: 50px;
+        }
+        .movie-poster {
+            width: 100%;
+            height: 100%;
+        }
+        .rating-color {
+            color: #e6cd28;
+        }
+        .user-details {
+            text-align: center;
+        }
+        .modal {
+            color: black;
+        }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -16,84 +32,106 @@
         var movieData = ViewBag.movie;
     }
     <section>
-        <div class="text-center container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2 class="display-4">MovieName: @movieData.Title</h2>
-                    <p>Description: @movieData.Description</p>
-                    <p>Release Date: @movieData.ReleaseDate</p>
-                    <p>Writer: @movieData.Writer</p>
-                    <p>Director: @movieData.Director</p>
-                    <p>Actors: @movieData.Actores</p>
-                    <p>Language: @movieData.Language</p>
-                    <p>RunTime: @movieData.RunTime</p>
-                    <p>Box Office: @movieData.BoxOffice</p>
-                </div>
-            </div>
-        </div>
-    <div class="container">
-        <div class="mt-4 p-5 bg-light rounded">
-            <div class="row">
-                <div class="col-sm-3">
-                    Poster goes here
-                    <img src="@movieData.PosterImageUrl" alt="Movie poster">
-                </div>
-                <div class="col-sm-9">
-                    Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem at eos quas aut doloribus error in porro? Quaerat, modi esse autem placeat natus, ab quae reiciendis odit et non possimus?
-                </div>
-            </div>
-        </div>
         <div class="container">
-            <ul class="list-group">
-                <!-- Option for user to enter their review -->
-                <li class="list-group-item">
-                    <div class="container">
-                        <p>Please provide your feedback for the movie</p>
-
-                        <!-- Rating with drag option -->
-                        <label for="customRange" class="form-label">Enter Rating from 1 to 10</label>
-                        <input type="range" class="form-range" id="customRange" step="10">
-
-                        <!-- Ask user input -->
-                        <div class="mb-3">
-                            <textarea class="form-control" id="formControlTextarea1" rows="3" placeholder="Enter review ..."></textarea>
-                        </div>
-                        <div class="text-end">
-                            <button type="button" class="btn btn-success">Submit</button>
+            <div class="mt-4 p-5 bg-dark rounded">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <img src="@Model.MovieData[0].PosterImageUrl" alt="Movie poster" style="width: -webkit-fill-available;">
+                    </div>
+                    <div class="col-sm-8" style="color: white;">
+                        <h2>@Model.MovieData[0].Title</h2><br/>
+                        <p>@Model.MovieData[0].Description</p>
+                        <h4>More details:</h4>
+                        <p>Release Date: @Model.MovieData[0].ReleaseDate</p>
+                        <p>Writer: @Model.MovieData[0].Writer</p>
+                        <p>Director: @Model.MovieData[0].Director</p>
+                        <p>Actors: @Model.MovieData[0].Actores</p>
+                        <p>Language: @Model.MovieData[0].Language</p>
+                        <p>RunTime: @Model.MovieData[0].RunTime</p>
+                        <p>Box Office: @Model.MovieData[0].BoxOffice</p>
+                        <!-- <p>Average movie rating: </p> -->
+                        <!-- Button to Open the Modal -->
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#review">
+                            Write a review
+                        </button>
+                        
+                        <!-- The Modal -->
+                        <div class="modal" id="review">
+                            <div class="modal-dialog modal-dialog-centered">
+                                <div class="modal-content">
+                            
+                                    <!-- Modal Header -->
+                                    <div class="modal-header">
+                                    <h4 class="modal-title">Write a review</h4>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                                    </div>
+                            
+                                    <!-- Modal body -->
+                                    <div class="modal-body">
+                                        <!-- Rating with drag option -->
+                                        <label for="customRange" class="form-label">Enter Rating from 1 to 10</label>
+                                        <div class="row">
+                                            <div class="col-sm-6">
+                                                <p>1</p>
+                                            </div>
+                                            <div class="col-sm-6" style="text-align: end;">
+                                                <p>10</p>
+                                            </div>
+                                        </div>
+                                        <input type="range" class="form-range" id="customRange" step="10">
+                                        <div class="mb-3">
+                                            <textarea class="form-control" id="formControlTextarea1" rows="3" placeholder="Enter review ..."></textarea>
+                                        </div>
+                                    </div>
+                            
+                                    <!-- Modal footer -->
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-success" data-bs-dismiss="modal">Submit</button>
+                                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
+                                    </div>
+                            
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </li>
-                
-                <!-- Reviews in database -->
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-sm-2">
-                            <p>User name</p>
-                            <img src="cinqueterre.jpg" class="rounded-circle" width="90px">
-                        </div>
-                        <div class="col-sm-10">
-                            <p>The movie was really great.</p>
-                            <p>Rating: 7</p>
-                        </div>
-                    </div>
-                </li>
+                </div>
+            </div>
 
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-sm-2">
-                            <p>User name</p>
-                            <img src="cinqueterre.jpg" class="rounded-circle" width="90px">
-                        </div>
-                        <div class="col-sm-10">
-                            <p>The movie was really great.</p>
-                            <p>Rating: 7</p>
-                        </div>
-                    </div>
-                </li>
-
-            </ul>
+            <div class="container reviews">
+                <ul class="list-group">
+                    
+                    <!-- Reviews in database -->
+                    @foreach (var review in Model.ListReviews.OrderByDescending(r => r.Timestamp))
+                    {
+                        <li class="list-group-item">
+                            <div class="row">
+                                <div class="col-sm-2 user-details">
+                                    <p>@review.UserId</p>
+                                    <!-- Keeping space for a profile photo of user. To be added later. -->
+                                    <img src="cinqueterre.jpg" class="rounded-circle" width="90px">
+                                </div>
+                                <div class="col-sm-10">
+                                    <p>Review: @review.Comment</p>
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <span>Rating: @review.UserRate</span>
+                                            <i class="fa fa-star rating-color"></i>
+                                            <i class="fa fa-star rating-color"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                        </div>
+                                        <div class="col-sm-6" style="text-align: right;">
+                                            <p>@review.Timestamp</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    }
+                </ul>
+            </div>
         </div>
-    </div>
     </section>
 </body>
 </html>
